org-441, fixed preview missing colors

--- a/assets/less/oc.less
+++ b/assets/less/oc.less
@@ -987,3 +987,8 @@ and (min-width : 800px) {
 .oc-credit-no-link {
   padding-right: 5px;
 }
+
+.oc-credit-count {
+  .make-md-column(1);
+  padding-top: 10px;
+}
